[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/Level1.gd" type="Script" id=1]
[ext_resource path="res://Levels/Environment/grass.tres" type="TileSet" id=2]
[ext_resource path="res://Items/Cheese.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=4]

[node name="Level1" type="Node"]
script = ExtResource( 1 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 65536, 0, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 0, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 0, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 0, 0, 131072, 0, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 0, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 0, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 0, 0, 196608, 0, 0, 196609, 3, 0, 196610, 3, 0, 196611, 0, 0, 196612, 3, 0, 196613, 3, 0, 196614, 0, 0, 196615, 3, 0, 196616, 3, 0, 196617, 0, 0, 196618, 3, 0, 196619, 3, 0, 196620, 0, 0, 196621, 3, 0, 196622, 3, 0, 196623, 0, 0, 196624, 3, 0, 196625, 3, 0, 196626, 0, 0, 262144, 0, 0, 262145, 3, 0, 262146, 3, 0, 262147, 0, 0, 262148, 3, 0, 262149, 3, 0, 262150, 0, 0, 262151, 3, 0, 262152, 3, 0, 262153, 0, 0, 262154, 3, 0, 262155, 3, 0, 262156, 0, 0, 262157, 3, 0, 262158, 3, 0, 262159, 0, 0, 262160, 3, 0, 262161, 3, 0, 262162, 0, 0, 327680, 0, 0, 327681, 3, 0, 327682, 3, 0, 327683, 0, 0, 327684, 3, 0, 327685, 3, 0, 327686, 0, 0, 327687, 3, 0, 327688, 3, 0, 327689, 0, 0, 327690, 3, 0, 327691, 3, 0, 327692, 0, 0, 327693, 3, 0, 327694, 3, 0, 327695, 0, 0, 327696, 3, 0, 327697, 3, 0, 327698, 0, 0, 393216, 0, 0, 393217, 3, 0, 393218, 3, 0, 393219, 0, 0, 393220, 3, 0, 393221, 3, 0, 393222, 0, 0, 393223, 3, 0, 393224, 3, 0, 393225, 0, 0, 393226, 3, 0, 393227, 3, 0, 393228, 0, 0, 393229, 3, 0, 393230, 3, 0, 393231, 0, 0, 393232, 3, 0, 393233, 3, 0, 393234, 0, 0, 458752, 0, 0, 458753, 3, 0, 458754, 3, 0, 458755, 0, 0, 458756, 3, 0, 458757, 3, 0, 458758, 0, 0, 458759, 3, 0, 458760, 3, 0, 458761, 0, 0, 458762, 3, 0, 458763, 3, 0, 458764, 0, 0, 458765, 3, 0, 458766, 3, 0, 458767, 0, 0, 458768, 3, 0, 458769, 3, 0, 458770, 0, 0, 524288, 0, 0, 524289, 3, 0, 524290, 3, 0, 524291, 0, 0, 524292, 3, 0, 524293, 3, 0, 524294, 0, 0, 524295, 3, 0, 524296, 3, 0, 524297, 0, 0, 524298, 3, 0, 524299, 3, 0, 524300, 0, 0, 524301, 3, 0, 524302, 3, 0, 524303, 0, 0, 524304, 3, 0, 524305, 3, 0, 524306, 0, 0, 589824, 0, 0, 589825, 3, 0, 589826, 3, 0, 589827, 0, 0, 589828, 3, 0, 589829, 3, 0, 589830, 0, 0, 589831, 3, 0, 589832, 3, 0, 589833, 0, 0, 589834, 3, 0, 589835, 3, 0, 589836, 0, 0, 589837, 3, 0, 589838, 3, 0, 589839, 0, 0, 589840, 3, 0, 589841, 3, 0, 589842, 0, 0, 655360, 0, 0, 655361, 3, 0, 655362, 3, 0, 655363, 0, 0, 655364, 3, 0, 655365, 3, 0, 655366, 0, 0, 655367, 3, 0, 655368, 3, 0, 655369, 0, 0, 655370, 3, 0, 655371, 3, 0, 655372, 0, 0, 655373, 3, 0, 655374, 3, 0, 655375, 0, 0, 655376, 3, 0, 655377, 3, 0, 655378, 0, 0, 720896, 0, 0, 720897, 3, 0, 720898, 3, 0, 720899, 0, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 0, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 0, 0, 720912, 3, 0, 720913, 3, 0, 720914, 0, 0, 786432, 0, 0, 786433, 3, 0, 786434, 3, 0, 786435, 0, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 0, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 0, 0, 786448, 3, 0, 786449, 3, 0, 786450, 0, 0, 851968, 0, 0, 851969, 2, 0, 851970, 2, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 2, 0, 851985, 2, 0, 851986, 0, 0 )

[node name="Cheese" parent="." instance=ExtResource( 3 )]
position = Vector2( 272.589, 192.474 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 31.6777, 149.009 )

[connection signal="success" from="Cheese" to="." method="_on_Cheese_success"]
[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
